Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextObjNumber.quorum
class Main
    action Main
        Text v
        v:SetValue(Test())
    end

    action Test() returns Text
        number var = 5.0
        return var
    end
end